--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
             <div class="destination" id="barcelona">
                 <h2>Berlin</h2>
             </div>
+            
+            <div class="destination" id="france">
+                <h2>Paris</h2>
+            </div>
+            
+            <div class="destination" id="planet">
+                <h2>Mars</h2>
+            </div>
         </div>
     </div>
 
