Spellcheck index.html, attached colors

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <div class="container">
         <div class="destination-container">
-            <div class="destination" id="Tokyo">
+            <div class="destination" id="tokyo">
                 <h2>Japan</h2>
             </div>
 
